applications/__tests__/__snapshots__/e2e.test.js.snap
// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bundle > bundle and translate x-type to schema (for regular $ref objects) 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type:
                Simple: string
                Or:
                  - number
                  - boolean
                ArrayOfEnums:
                  array:
                    - foo
                    - bar
                OpenObject:
                  required: boolean
                  string: boolean
                Ref: number
                RefObject:
                  somekey:
                    - true
                    - 42.1
                  $literal:string: $literal:number
                ConditionalRef:
                  - $ref: '#/components/x-types/Bar'
                  - undefined
              examples:
                Test:
                  value:
                    Simple: some string
                    Or: 42
                    ArrayOfEnums:
                      - foo
                      - foo
                      - bar
                    OpenObject:
                      required: true
                      not-listed-property: false
                    Ref: 42
                    RefObject:
                      foo: not expected here
                      somekey: 42.1
                      string: number
              schema:
                type: object
                properties:
                  Simple:
                    type: string
                  Or:
                    anyOf:
                      - type: number
                      - type: boolean
                  ArrayOfEnums:
                    type: array
                    items:
                      type: string
                      enum:
                        - foo
                        - bar
                  OpenObject:
                    type: object
                    properties:
                      required:
                        type: boolean
                    required:
                      - required
                    additionalProperties:
                      type: boolean
                  Ref:
                    type: number
                  RefObject:
                    type: object
                    properties:
                      somekey:
                        anyOf:
                          - type: boolean
                            enum:
                              - true
                          - type: number
                            enum:
                              - 42.1
                      string:
                        type: string
                        enum:
                          - number
                    required:
                      - somekey
                      - string
                    additionalProperties: false
                  ConditionalRef:
                    type: object
                    properties:
                      somekey:
                        anyOf:
                          - type: boolean
                            enum:
                              - true
                          - type: number
                            enum:
                              - 42.1
                      string:
                        type: string
                        enum:
                          - number
                    required:
                      - somekey
                      - string
                    additionalProperties: false
                required:
                  - Simple
                  - Or
                  - ArrayOfEnums
                  - OpenObject
                  - Ref
                  - RefObject
                additionalProperties: false
components:
  x-types:
    Foo: number
    Bar:
      somekey:
        - true
        - 42.1
      $literal:string: $literal:number
"
`;

exports[`bundle > descriptions in x-types 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Root response description.
          content:
            application/json:
              x-type:
                Plain: string
                Complex:
                  array:
                    string: boolean
                    $literal:string:
                      - $literal:number
                      - $literal:string
                    $descriptions:
                      string: |
                        An example of using literals.
                Conditional:
                  - az
                  - undefined
                $literal:$descriptions: $descriptions
                Referenced: string
                NestedReferenced:
                  ReferencedAgain:
                    $ref: '#/components/x-types/Referenced'
                  $descriptions:
                    ReferencedAgain: Referenced inside the ref.
                $descriptions:
                  Plain: A plain string field.
                  Complex: An array of boolean records with the fixed 'string' property.
                  Conditional: A conditional field.
                  $descriptions: Literal $descriptions field.
                  Referenced: A referenced property.
                  NestedReferenced: A reference with nested references.
              schema:
                type: object
                properties:
                  Plain:
                    type: string
                    description: A plain string field.
                  Complex:
                    type: array
                    items:
                      type: object
                      properties:
                        string:
                          type: string
                          enum:
                            - number
                            - string
                          description: |
                            An example of using literals.
                      required:
                        - string
                      additionalProperties:
                        type: boolean
                    description: An array of boolean records with the fixed 'string' property.
                  Conditional:
                    type: string
                    enum:
                      - az
                    description: A conditional field.
                  $descriptions:
                    type: string
                    enum:
                      - $descriptions
                    description: Literal $descriptions field.
                  Referenced:
                    type: string
                    description: A referenced property.
                  NestedReferenced:
                    type: object
                    properties:
                      ReferencedAgain:
                        type: string
                        description: Referenced inside the ref.
                    required:
                      - ReferencedAgain
                    additionalProperties: false
                    description: A reference with nested references.
                required:
                  - Plain
                  - Complex
                  - $descriptions
                  - Referenced
                  - NestedReferenced
                additionalProperties: false
components:
  x-types:
    Referenced: string
    NestedReferenced:
      ReferencedAgain: string
      $descriptions:
        ReferencedAgain: Referenced inside the ref.
"
`;

exports[`bundle > distributivity in x-types 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test.
          content:
            application/json:
              examples:
                Correct:
                  value:
                    az: correct
                    vidh: correct
                Incorrect:
                  value:
                    bukh: requires also vidh
              x-type:
                $and:
                  - - az: string
                    - bukh: string
                  - - vidh: string
              schema:
                anyOf:
                  - type: object
                    properties:
                      az:
                        type: string
                      vidh:
                        type: string
                    required:
                      - az
                      - vidh
                    additionalProperties: false
                  - type: object
                    properties:
                      bukh:
                        type: string
                      vidh:
                        type: string
                    required:
                      - bukh
                      - vidh
                    additionalProperties: false
components: {}
"
`;

exports[`bundle > do not add schemas if there is no x-type 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              examples:
                Test:
                  value:
                    Simple: some string
components: {}
"
`;

exports[`bundle > do not bundle an openapi with type never 1`] = `undefined`;

exports[`bundle > openapi that contains literal $schema 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test literal $schema
          content:
            application/json:
              x-type:
                $schema:
                  type: string
              example: Should pass.
              schema:
                type: string
            application/problems+json:
              x-type:
                WrongSchemaFormat:
                  $schema:
                    type: object
                    properties:
                      Correct:
                        type: string
                      Wrong:
                        type: wrong!
                    unexpected-property: Should fail!
                Referenced:
                  $schema:
                    $ref: '#/components/schemas/Foo'
              schema:
                type: object
                properties:
                  WrongSchemaFormat:
                    type: object
                    properties:
                      Correct:
                        type: string
                      Wrong:
                        type: wrong!
                    unexpected-property: Should fail!
                  Referenced:
                    type: string
                    not-expected: Should fail!
                required:
                  - WrongSchemaFormat
                  - Referenced
                additionalProperties: false
components:
  schemas:
    Foo:
      type: string
      not-expected: Should fail!
"
`;

exports[`bundle > preserve existing schemas if preserveExistingSchemas is true 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type: string
              schema:
                type: number
components: {}
"
`;

exports[`bundle > replace existing schemas by default 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type: string
              schema:
                type: string
components: {}
"
`;

exports[`bundle > resolve and translate $ands 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type:
                $and:
                  - foo: boolean
                  - bar: number
              example:
                foo: wrong!
                wrong: not-expected!
              schema:
                type: object
                properties:
                  foo:
                    type: boolean
                  bar:
                    type: number
                required:
                  - foo
                  - bar
                additionalProperties: false
            application/problems+json:
              x-type:
                WrongAndFormat:
                  $and:
                    foo: boolean
                    bar: number
                Empty:
                  $and: []
                ImpossibleArraysCombination:
                  $and:
                    - array: string
                    - array: number
              schema:
                type: object
                properties:
                  WrongAndFormat:
                    not: {}
                  Empty:
                    not: {}
                  ImpossibleArraysCombination:
                    not: {}
                required:
                  - WrongAndFormat
                  - Empty
                  - ImpossibleArraysCombination
                additionalProperties: false
components:
  x-types:
    CorrectAnd:
      $and:
        - foo: boolean
        - bar: number
"
`;

exports[`bundle > resolve different type of $refs on different levels and ignore wrong $refs (with --force) when bundling 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: An object with refs
          content:
            application/json:
              x-type:
                AFieldWithRegularRef: any
                AFieldWithInlineRef: any
              examples:
                Correct:
                  value:
                    AFieldWithInlineRef: something
                    AFieldWithRegularRef: anything
                Incorrect:
                  value:
                    NonExistingField: wrong
              schema:
                type: object
                properties:
                  AFieldWithRegularRef:
                    anyOf:
                      - type: string
                      - type: number
                      - type: boolean
                      - type: object
                      - type: array
                      - type: 'null'
                  AFieldWithInlineRef:
                    anyOf:
                      - type: string
                      - type: number
                      - type: boolean
                      - type: object
                      - type: array
                      - type: 'null'
                required:
                  - AFieldWithRegularRef
                  - AFieldWithInlineRef
                additionalProperties: false
        '201':
          description: A bare ref
          content:
            application/json:
              x-type: any
              examples:
                Correct:
                  value: Anything
              schema:
                anyOf:
                  - type: string
                  - type: number
                  - type: boolean
                  - type: object
                  - type: array
                  - type: 'null'
        '202':
          description: A file reference
          content:
            application/json:
              x-type: number
              examples:
                Correct:
                  value: 42
                Incorrect:
                  value: false
              schema:
                type: number
        '203':
          description: A transitive reference
          content:
            application/json:
              x-type:
                array: any
              examples:
                Correct:
                  value:
                    - anything
                Incorrect:
                  value: anything
              schema:
                type: array
                items:
                  anyOf:
                    - type: string
                    - type: number
                    - type: boolean
                    - type: object
                    - type: array
                    - type: 'null'
        '404':
          description: A wrong ref
          content:
            application/json:
              x-type:
                AWrongRef:
                  $ref: wrong-file.yaml
              example:
                AWrongRef: Accepts anything
              schema:
                type: object
                properties:
                  AWrongRef:
                    anyOf:
                      - type: string
                      - type: number
                      - type: boolean
                      - type: object
                      - type: array
                      - type: 'null'
                required:
                  - AWrongRef
                additionalProperties: false
components:
  x-types:
    Foo: any
    Bar:
      array: any
"
`;

exports[`bundle > translate string and number formats 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type:
                Formats:
                  String: string
                  Date: string::date
                  DateTime: string::date-time
                  Email: string::email
                  UUID: string::uuid
                  Binary: string::binary
                  Number: number
                  Integer: number::integer
              schema:
                type: object
                properties:
                  Formats:
                    type: object
                    properties:
                      String:
                        type: string
                      Date:
                        type: string
                        format: date
                      DateTime:
                        type: string
                        format: date-time
                      Email:
                        type: string
                        format: email
                      UUID:
                        type: string
                        format: uuid
                      Binary:
                        type: string
                        format: binary
                      Number:
                        type: number
                      Integer:
                        type: integer
                    required:
                      - String
                      - Date
                      - DateTime
                      - Email
                      - UUID
                      - Binary
                      - Number
                      - Integer
                    additionalProperties: false
                required:
                  - Formats
                additionalProperties: false
components: {}
"
`;

exports[`bundle > translate x-type to schema inside parameters 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      parameters:
        - name: correct
          in: query
          x-type: string
          example: Test
          schema:
            type: string
        - name: wrong-example
          in: query
          x-type: string
          example: 42
          schema:
            type: string
        - name: lacks-x-type
          in: query
        - $ref: '#/components/parameters/Referenced'
components:
  parameters:
    Referenced:
      name: referenced-wrong-example
      in: query
      x-type: string
      example: true
      schema:
        type: string
"
`;

exports[`bundle > translate x-types inside ORs 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test.
          content:
            application/json:
              x-type:
                Or:
                  - az
                  - bukh
                Conditional:
                  - vidh
                  - undefined
                NestedConditional:
                  - $ref: '#/components/x-types/Or'
                  - $ref: '#/components/x-types/Conditional'
                ComplexOr:
                  - az
                  - bukh: vidh
                  - - $literal:string
                    - $literal:number
              examples:
                Correct:
                  value:
                    Or: az
                    ComplexOr: string
                Incorrect:
                  value:
                    Or: wrong
                    Conditional: wrong
                    NestedConditional: wrong
                    ComplexOr: wrong
              schema:
                type: object
                properties:
                  Or:
                    type: string
                    enum:
                      - az
                      - bukh
                  Conditional:
                    type: string
                    enum:
                      - vidh
                  NestedConditional:
                    type: string
                    enum:
                      - az
                      - bukh
                      - vidh
                  ComplexOr:
                    anyOf:
                      - type: string
                        enum:
                          - az
                          - string
                          - number
                      - type: object
                        properties:
                          bukh:
                            type: string
                            enum:
                              - vidh
                        required:
                          - bukh
                        additionalProperties: false
                required:
                  - Or
                  - ComplexOr
                additionalProperties: false
components:
  x-types:
    Or:
      - az
      - bukh
    Conditional:
      - vidh
      - undefined
"
`;

exports[`lint > distribytivity in x-types 1`] = `
"validating applications/resources/openapi-with-nested-ors-in-ands.yaml...
[1] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'az'.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'vidh'.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/bukh

Example value must conform to the schema: must NOT have additional properties \`bukh\`.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'vidh'.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must match a schema in anyOf.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


applications/resources/openapi-with-nested-ors-in-ands.yaml: validated in <test>ms

❌ Validation failed with 5 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > general openapi case (using preprocessors to transform) 1`] = `
"validating applications/resources/openapi.yaml...
[1] applications/resources/openapi.yaml:46:23 at #/paths/~1test/get/responses/200/content/application~1json/examples/Test/value/RefObject/foo

Example value must conform to the schema: \`RefObject\` property must NOT have additional properties \`foo\`.

44 | Ref: 42
45 | RefObject:
46 |   foo: not expected here
   |   ^^^
47 |   somekey: 42.10
48 |   string: number

referenced from applications/resources/openapi.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


applications/resources/openapi.yaml: validated in <test>ms

❌ Validation failed with 1 error.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > inline refs in x-openapi-with-refs.yaml 1`] = `
"validating applications/outputs/x-openapi-with-refs.yaml...
[1] applications/outputs/x-openapi-with-refs.yaml:23:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'AFieldWithRegularRef'.

21 |   Incorrect:
22 |     value:
23 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^^^^^^^^
24 | schema:
25 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/outputs/x-openapi-with-refs.yaml:23:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'AFieldWithInlineRef'.

21 |   Incorrect:
22 |     value:
23 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^^^^^^^^
24 | schema:
25 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/outputs/x-openapi-with-refs.yaml:23:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/NonExistingField

Example value must conform to the schema: must NOT have additional properties \`NonExistingField\`.

21 |   Incorrect:
22 |     value:
23 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^
24 | schema:
25 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/outputs/x-openapi-with-refs.yaml:72:26 at #/paths/~1test/get/responses/202/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: type must be number.

70 |     value: 42
71 |   Incorrect:
72 |     value: false
   |            ^^^^^
73 | schema:
74 |   type: number

referenced from applications/outputs/x-openapi-with-refs.yaml:67:15 at #/paths/~1test/get/responses/202/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/outputs/x-openapi-with-refs.yaml:86:26 at #/paths/~1test/get/responses/203/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: type must be array.

84 |       - anything
85 |   Incorrect:
86 |     value: anything
   |            ^^^^^^^^
87 | schema:
88 |   type: array

referenced from applications/outputs/x-openapi-with-refs.yaml:79:15 at #/paths/~1test/get/responses/203/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[6] applications/outputs/x-openapi-with-refs.yaml:103:19 at #/paths/~1test/get/responses/404/content/application~1json/x-type/AWrongRef

Can't resolve $ref: ENOENT: no such file or directory './applications/outputs/wrong-file.yaml'

101 | x-type:
102 |   AWrongRef:
103 |     $ref: wrong-file.yaml
    |     ^^^^^^^^^^^^^^^^^^^^^
104 | example:
105 |   AWrongRef: Accepts anything

Error was generated by the no-unresolved-refs rule.


applications/outputs/x-openapi-with-refs.yaml: validated in <test>ms

❌ Validation failed with 6 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi that contains literal $schema 1`] = `
"validating applications/resources/openapi-literal-schema.yaml...
[1] applications/resources/openapi-literal-schema.yaml:18:13 at #/paths/~1test/get/responses/200/content/application~1problems+json/schema/properties/WrongSchemaFormat/unexpected-property

Property \`unexpected-property\` is not expected here.

16 |   example: Should pass.
17 |
18 | application/problems+json:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
19 |   x-type:
20 |     WrongSchemaFormat:

Error was generated by the spec rule.


[2] applications/resources/openapi-literal-schema.yaml:19:15 at #/paths/~1test/get/responses/200/content/application~1problems+json/schema/properties/WrongSchemaFormat/properties/Wrong/type

\`type\` can be one of the following only: "object", "array", "string", "number", "integer", "boolean", "null".

17 |
18 |             application/problems+json:
19 |               x-type:
   |               ^^^^^^^
20 |                 WrongSchemaFormat:
   |                 ^^^^^^^^^^^^^^^^^^
 … |                 < 10 more lines >
31 |                     $ref: '#/components/schemas/Foo'
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
32 |
33 | components:

Error was generated by the spec rule.


[3] applications/resources/openapi-literal-schema.yaml:18:13 at #/paths/~1test/get/responses/200/content/application~1problems+json/schema/properties/Referenced/not-expected

Property \`not-expected\` is not expected here.

16 |   example: Should pass.
17 |
18 | application/problems+json:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
19 |   x-type:
20 |     WrongSchemaFormat:

Error was generated by the spec rule.


[4] applications/resources/openapi-literal-schema.yaml:37:7 at #/components/schemas/Foo/not-expected

Property \`not-expected\` is not expected here.

35 | Foo:
36 |   type: string
37 |   not-expected: Should fail!
   |   ^^^^^^^^^^^^
38 |

Error was generated by the spec rule.


applications/resources/openapi-literal-schema.yaml: validated in <test>ms

❌ Validation failed with 4 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi that contains wrong and correct $ands 1`] = `
"validating applications/resources/openapi-and.yaml...
ERROR! Expected an array but got:
{ foo: 'boolean', bar: 'number' }
ERROR! Cannot merge empty lists.
ERROR! Cannot merge 'array' types.
WARNING! Got an 'undefined' type.
WARNING! Got an 'undefined' type.
WARNING! Got an 'undefined' type.
[1] applications/resources/openapi-and.yaml:16:17 at #/paths/~1test/get/responses/200/content/application~1json/example

Example value must conform to the schema: must have required property 'bar'.

14 |     $ref: '#/components/x-types/CorrectAnd'
15 |   example:
16 |     foo: wrong!
   |     ^^^^^^^^^^^
17 |     wrong: not-expected!
   |     ^^^^^^^^^^^^^^^^^^^^
18 |
19 | application/problems+json:

referenced from applications/resources/openapi-and.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/openapi-and.yaml:17:17 at #/paths/~1test/get/responses/200/content/application~1json/example/wrong

Example value must conform to the schema: must NOT have additional properties \`wrong\`.

15 |   example:
16 |     foo: wrong!
17 |     wrong: not-expected!
   |     ^^^^^
18 |
19 | application/problems+json:

referenced from applications/resources/openapi-and.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/openapi-and.yaml:16:22 at #/paths/~1test/get/responses/200/content/application~1json/example/foo

Example value must conform to the schema: \`foo\` property type must be boolean.

14 |   $ref: '#/components/x-types/CorrectAnd'
15 | example:
16 |   foo: wrong!
   |        ^^^^^^
17 |   wrong: not-expected!
18 |

referenced from applications/resources/openapi-and.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/openapi-and.yaml:23:21 at #/paths/~1test/get/responses/200/content/application~1problems+json/x-type/WrongAndFormat/$and

Expected type \`XTypeList\` (array) but got \`object\`

21 | WrongAndFormat:
22 |   $and: # Expected an array!
23 |     foo: boolean
   |     ^^^^^^^^^^^^
24 |     bar: number
   |     ^^^^^^^^^^^
25 | Empty: # Cannot merge empty lists!
26 |   $and: []

Error was generated by the spec rule.


applications/resources/openapi-and.yaml: validated in <test>ms

❌ Validation failed with 4 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi with ORs (including nested and referenced) 1`] = `
"validating applications/resources/openapi-or.yaml...
[1] applications/resources/openapi-or.yaml:34:25 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/Or

Example value must conform to the schema: \`Or\` property must be equal to one of the allowed values "az", "bukh".

Did you mean:
  - az
  - bukh

32 | Incorrect:
33 |   value:
34 |     Or: wrong
   |         ^^^^^
35 |     Conditional: wrong
36 |     NestedConditional: wrong

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/openapi-or.yaml:35:34 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/Conditional

Example value must conform to the schema: \`Conditional\` property must be equal to one of the allowed values "vidh".

Did you mean: vidh ?

33 | value:
34 |   Or: wrong
35 |   Conditional: wrong
   |                ^^^^^
36 |   NestedConditional: wrong
37 |   ComplexOr: wrong

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/openapi-or.yaml:36:40 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/NestedConditional

Example value must conform to the schema: \`NestedConditional\` property must be equal to one of the allowed values "az", "bukh", "vidh".

Did you mean:
  - az
  - bukh
  - vidh

34 | Or: wrong
35 | Conditional: wrong
36 | NestedConditional: wrong
   |                    ^^^^^
37 | ComplexOr: wrong
38 |

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/openapi-or.yaml:37:32 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/ComplexOr

Example value must conform to the schema: \`ComplexOr\` property must be equal to one of the allowed values "az", "string", "number".

Did you mean:
  - az
  - string
  - number

35 |                     Conditional: wrong
36 |                     NestedConditional: wrong
37 |                     ComplexOr: wrong
   |                                ^^^^^
38 |
39 | components:

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/resources/openapi-or.yaml:37:32 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/ComplexOr

Example value must conform to the schema: \`ComplexOr\` property type must be object.

35 |                     Conditional: wrong
36 |                     NestedConditional: wrong
37 |                     ComplexOr: wrong
   |                                ^^^^^
38 |
39 | components:

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[6] applications/resources/openapi-or.yaml:37:32 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/ComplexOr

Example value must conform to the schema: \`ComplexOr\` property must match a schema in anyOf.

35 |                     Conditional: wrong
36 |                     NestedConditional: wrong
37 |                     ComplexOr: wrong
   |                                ^^^^^
38 |
39 | components:

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


applications/resources/openapi-or.yaml: validated in <test>ms

❌ Validation failed with 6 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi with mixed types 1`] = `
"validating applications/resources/openapi-mixed-types.yaml...
[1] applications/resources/openapi-mixed-types.yaml:9:7 at #/components/x-types/MixedTypeArray/neighbour

Property \`neighbour\` is not expected here.

 7 | MixedTypeArray:
 8 |   array: string
 9 |   neighbour: not-allowed
   |   ^^^^^^^^^
10 | MixedAnd:
11 |   $and:

Error was generated by the spec rule.


[2] applications/resources/openapi-mixed-types.yaml:14:7 at #/components/x-types/MixedAnd/neighbour

Property \`neighbour\` is not expected here.

12 |     - foo: string
13 |     - bar: string
14 |   neighbour: not-allowed
   |   ^^^^^^^^^
15 | MixedRef:
16 |   $ref: '#/components/x-types/Allowed'

Error was generated by the spec rule.


[3] applications/resources/openapi-mixed-types.yaml:16:7 at #/components/x-types/MixedRef

You cannot have other properties alongside "$ref" in the same object

14 |   neighbour: not-allowed
15 | MixedRef:
16 |   $ref: '#/components/x-types/Allowed'
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
17 |   neighbour: not-allowed
   |   ^^^^^^^^^^^^^^^^^^^^^^
18 | Allowed:
19 |   foo: boolean

Error was generated by the x-types/no-$ref-neighbors rule.


applications/resources/openapi-mixed-types.yaml: validated in <test>ms

❌ Validation failed with 3 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi with x-types inside parameters 1`] = `
"validating applications/resources/openapi-with-x-types-inside-parameters.yaml...
[1] applications/resources/openapi-with-x-types-inside-parameters.yaml:16:20 at #/paths/~1test/get/parameters/1/example

Example value must conform to the schema: type must be string.

14 |   in: query
15 |   x-type: string
16 |   example: 42
   |            ^^
17 | - name: lacks-x-type
18 |   in: query

referenced from applications/resources/openapi-with-x-types-inside-parameters.yaml:13:11 at #/paths/~1test/get/parameters/1 

Error was generated by the no-invalid-parameter-examples rule.


[2] applications/resources/openapi-with-x-types-inside-parameters.yaml:17:11 at #/paths/~1test/get/parameters/2

Must contain at least one of the following fields: schema, content, x-type.

15 |           x-type: string
16 |           example: 42
17 |         - name: lacks-x-type
   |           ^^^^^^^^^^^^^^^^^^
18 |           in: query
   |           ^^^^^^^^^
19 |         - $ref: '#/components/parameters/Referenced'
20 | components:

Error was generated by the spec rule.


[3] applications/resources/openapi-with-x-types-inside-parameters.yaml:26:16 at #/components/parameters/Referenced/example

Example value must conform to the schema: type must be string.

24 | in: query
25 | x-type: string
26 | example: true
   |          ^^^^
27 |

referenced from applications/resources/openapi-with-x-types-inside-parameters.yaml:23:7 at #/components/parameters/Referenced 

Error was generated by the no-invalid-parameter-examples rule.


applications/resources/openapi-with-x-types-inside-parameters.yaml: validated in <test>ms

❌ Validation failed with 3 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;
